--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="https://github.com/microsoft/DiscoFaceGAN">[Code]</a>
 				<a href="images/discoface.txt">[BibTeX]</a>
                 <br>
-                <p>We propose DiscoFaceGAN, an approach for face image generation of virtual people with DISentangled, precisely-COntrollable latent representations for identity of non-existing people, expression, pose, and illumination. </p>
+                <p>We propose DiscoFaceGAN, an approach for face image generation of virtual people with disentangled, precisely-controllable latent representations for identity, expression, pose, and illumination. </p>
             </td>
         </tr>
 
