--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Yu Deng</title>
   
   <meta name="author" content="Yu Deng">
+  <meta name="description" content="Yu Deng's Homepage">
   <meta name="keywords" content="Yu Deng,邓誉,homepage,主页,PhD,computer vision,MSRA,Tsinghua,3D face,3D reconstruction,image generation,implicit field">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
