--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Yu Deng's Homepage">
   <meta name="keywords" content="Yu Deng,邓誉,homepage,主页,PhD,computer vision,MSRA,Tsinghua,3D face,3D reconstruction,image generation,implicit field">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Yu Deng (邓誉)'s Homepage</title>
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
