--- a/index.html
+++ b/index.html
@@ -49,6 +49,29 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
+		<video height="242" playsinline autoplay loop preload muted>
+                <source src='images/gram.mp4' style="width:100%;max-width:100%; position: absolute;top: -5%">
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>GRAM: Generative Radiance Manifolds for 3D-Aware Image Generation</papertitle>
+                <br>
+                <strong>Yu Deng</strong>, Jiaolong Yang, Jianfeng Xiang, Xin Tong
+                <br>
+                <em>ArXiv 2021,</em>
+                <br>
+                <a href="https://arxiv.org/abs/2112.08867">[PDF]</a>
+                <a href="https://yudeng.github.io/GRAM/">[Project]</a>
+				<a href="images/gram.txt">[BibTeX]</a>
+                <br>
+                <p>We propose Generative Radiance Manifolds (GRAM), a method that can generate 3D-consistent images with explicit camera control, trained on only unstructured 2D images.</p>
+            </td>
+        </tr>
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
                 <img src='images/arxiv_difnet.png' style="width:100%;max-width:100%; position: absolute;top: -5%">
                 </div>
             </td>
