--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-		<video height="242" playsinline autoplay loop preload muted>
+		<video playsinline autoplay loop preload muted>
                 <source src='images/gram.mp4' style="width:100%;max-width:100%; position: absolute;top: -5%">
 		</video>
                 </div>
