--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-		<video playsinline autoplay loop preload muted>
-                <source src='images/gram.mp4' style="width:100%;max-width:100%; position: absolute;top: -5%">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/gram.mp4'>
 		</video>
                 </div>
             </td>
