--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one" >
-                    <img src='images/cvprw19_3dface.png' style="width:100%;max-width:100%; position: absolute;top: -5%">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/accurate3d.mp4'>
+		</video>
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
