--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
             </td>
         </tr>
 
+        <tr></tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+		<hr style="margin-top:0px">
+                <p>The website template was adapted from <a href="https://panzhang0212.github.io/">Pan Zhang</a>.</p>
+            </td>
+        </tr>
+
       </td>
     </tr>
   </table>
