--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
         </tr>
 
         <tr></tr>
+            <td style="padding:20px;width:0%;vertical-align:middle">
+            </td>
             <td style="padding:20px;width:100%;vertical-align:middle">
 		<hr style="margin-top:0px">
                 <p>The website template was adapted from <a href="https://panzhang0212.github.io/">Pan Zhang</a>.</p>
