--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <strong>Yu Deng</strong>, Jiaolong Yang, Dong Chen, Fang Wen, Xin Tong
                 <br>
                 <em>2020 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2020, 
-				<strong>Oral Presentation</strong>
+				<strong><font color="#FF0000">Oral Presentation</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2004.11660">[PDF]</a>
                 <a href="https://github.com/microsoft/DiscoFaceGAN">[Code]</a>
@@ -149,7 +149,7 @@
                 <strong>Yu Deng</strong>, Jiaolong Yang, Sicheng Xu, Dong Chen, Yunde Jia, Xin Tong
                 <br>
                 <em>2019 IEEE Conference on Computer Vision and Pattern Recognition Workshop on AMFG</em>, CVPRW 2019, 
-                <strong>Best Paper Award</strong>
+                <strong><font color="#FF0000">Best Paper Award</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/1903.08527">[PDF]</a>
                 <a href="https://github.com/microsoft/Deep3DFaceReconstruction">[Code]</a>
