--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <br>
                 <strong>Yu Deng</strong>, Jiaolong Yang, Jianfeng Xiang, Xin Tong
                 <br>
-                <em>ArXiv 2021,</em>
+                <em>2022 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2022,
                 <br>
                 <a href="https://arxiv.org/abs/2112.08867">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAM/">[Project]</a>
