--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <strong>Yu Deng</strong>, Jiaolong Yang, Jianfeng Xiang, Xin Tong
                 <br>
                 <em>2022 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2022,
+		    <strong><font color="#FF0000">Oral Presentation</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2112.08867">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAM/">[Project]</a>
