--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </td>
             <td style="padding:20px;width:100%;vertical-align:middle">
 		<hr style="margin-top:0px">
-                <p>The website template was adapted from <a href="https://panzhang0212.github.io/">Pan Zhang</a>.</p>
+                <p>The website template was adapted from <a href="https://jonbarron.info/">Jon Barron</a>.</p>
             </td>
         </tr>
 
