--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
               <p style="text-align:center">
                 Email: t-yudeng[at]microsoft.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
-              <p>I am a Joint PhD student of <a href="http://www.castu.tsinghua.edu.cn/">Institute For Advanced Study in Tsinghua University</a> and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia(MSRA)</a>,
-		under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a>. 
+              <p>I received my Ph.D. degree at <a href="http://www.castu.tsinghua.edu.cn/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a>. 
                 I am currently working as a research intern in <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</a> in MSRA, mentored by 
-		Senior Researcher <a href="http://jlyang.org/">Jiaolong Yang</a> and Partner Research Manager <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a>.
+		Senior Researcher <a href="http://jlyang.org/">Jiaolong Yang</a> and Partner Research Manager <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a>. I am about to join <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai<\a> as a researcher. 
               </p>
               <p>
                 I received B.S. from Department of Physics in Tsinghua University, 2017.
