--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>GRAM-HD: 3D-Consistent Image Generation at High Resolution with Generative Radiance Manifolds</papertitle>
+                <br>
+                Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>,, Xin Tong
+                <br>
+                <em>arXiv</em>, 2022,
+                <br>
+                <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
+                <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
+                <br>
+                <p>We propose GRAM-HD, a 3D-aware GAN that can generate 3D-consistent images at 1024x1024 resolution.</p>
+            </td>
+        </tr>
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/gram.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>GRAM: Generative Radiance Manifolds for 3D-Aware Image Generation</papertitle>
                 <br>
                 <strong>Yu Deng</strong>, Jiaolong Yang, Jianfeng Xiang, Xin Tong
