--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>GRAM-HD: 3D-Consistent Image Generation at High Resolution with Generative Radiance Manifolds</papertitle>
                 <br>
-                Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>,, Xin Tong
+                Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>, Xin Tong
                 <br>
                 <em>arXiv</em>, 2022,
                 <br>
                 <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
                 <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
                 <br>
-                <p>We propose GRAM-HD, a 3D-aware GAN that can generate 3D-consistent images at 1024x1024 resolution.</p>
+                <p>We propose GRAM-HD, a 3D-aware GAN that can generate photorealistic and 3D-consistent images at 1024x1024 resolution.</p>
             </td>
         </tr>
 
