--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
-                <source src='images/gram.mp4'>
+                <source src='images/GRAMHD.mp4'>
 		</video>
                 </div>
             </td>
@@ -58,7 +58,7 @@
                 <br>
                 Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>, Xin Tong
                 <br>
-                <em>arXiv</em>, 2022,
+                <em>arXiv</em> 2022,
                 <br>
                 <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
                 <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
