--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Yu Deng (邓誉)</name>
               </p>
               <p style="text-align:center">
-                Email: t-yudeng[at]microsoft.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
+                Email: dengyu2008[at]hotmail.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I received my Ph.D. degree at <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a>. 
                 I am currently working as a research intern at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</a> in MSRA, mentored by 
