--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
               <p style="text-align:center">
                 Email: dengyu2008[at]hotmail.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
-              <p>I received my Ph.D. degree at <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a>. 
-                I am currently working as a research intern at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</a> in MSRA, mentored by 
-		Senior Researcher <a href="http://jlyang.org/">Jiaolong Yang</a> and Partner Research Manager <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a>. I am about to join <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a> as a researcher. 
+              <p>I am an incoming researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction, 3D representation learning, and neural rendering. 
               </p>
               <p>
-                I received B.S. from Department of Physics in Tsinghua University, 2017.
+                Before joining Xiaobing, I received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
+                worked closely with <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">MSRA</a> from 2017 to 2022.  
+	      Before that, I received my B.S. from Department of Physics in Tsinghua University in 2017.
               </p>
             </td>
             <td style="padding:15% 7% 7% 7%;width:40%;max-width:40%">
