--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p style="text-align:center">
                 Email: dengyu2008[at]hotmail.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
-              <p>I am an incoming researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction, 3D representation learning, and neural rendering. 
+              <p>I am an incoming researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction\&generation, 3D representation learning, and neural rendering. 
               </p>
               <p>
                 Before joining Xiaobing, I received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
