--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Yu Deng (邓誉)</name>
               </p>
               <p style="text-align:center">
-                Email: dengyu2008[at]hotmail.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
+                Email: dengyu[at]xiaobing.ai &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I am an incoming researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction&generation, 3D representation learning, and neural rendering. 
               </p>
