--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
               <p style="text-align:center">
                 Email: dengyu[at]xiaobing.ai &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
-              <p>I am an incoming researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction&generation, 3D representation learning, and neural rendering. 
+              <p>I am currently a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction&generation, 3D representation learning, and neural rendering. 
               </p>
               <p>
                 Before joining Xiaobing, I received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
                 worked closely with <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">MSRA</a> from 2017 to 2022.  
 	      Before that, I received my B.S. from Department of Physics in Tsinghua University in 2017.
               </p>
+              <p>
+                <strong>
+                I'm seeking long-term internship candidates for research on 3D-aware GAN and NeRF-based neural rendering. Feel free to send me an email if you are interested.
+                </strong>
+              </p>
+		    
             </td>
             <td style="padding:15% 7% 7% 7%;width:40%;max-width:40%">
               <a href="images/yu.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yu.jpg" class="hoverZoomLink"></a>
