--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
               <p>
                 <strong>
-                I'm seeking long-term internship candidates for research on 3D-aware GAN and NeRF-based neural rendering. Feel free to send me an email if you are interested.
+                I'm seeking research interns on 3D-aware GAN and NeRF-based neural rendering. Feel free to send me an email if you are interested.
                 </strong>
               </p>
 		    
