--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2112.08867">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAM/">[Project]</a>
+		<a href="https://github.com/microsoft/GRAM">[Code]</a>
 				<a href="images/gram.txt">[BibTeX]</a>
                 <br>
                 <p>We propose Generative Radiance Manifolds (GRAM), a method that can generate 3D-consistent images with explicit camera control, trained on only unstructured 2D images.</p>
