--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
                 <p>We propose GRAM-HD, a 3D-aware GAN that can generate photorealistic and 3D-consistent images at 1024x1024 resolution.</p>
             </td>
         </tr>
+	      
+	<tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/gen_deform_nerf.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Generative Deformable Radiance Fields for Disentangled Image Synthesis of Topology-Varying Objects</papertitle>
+                <br>
+                Ziyu Wang, <strong>Yu Deng</strong>, Jiaolong Yang, Jingyu Yi, Xin Tong
+                <br>
+                <em>The 30th Pacific Graphics Conference</em>, PG 2022,
+                <br>
+                <a href="https://yudeng.github.io/">[PDF]</a>
+                <br>
+                <p>We propose a generative model for synthesizing radiance fields of topology-varying objects with disentangled shape and appearance variations.</p>
+            </td>
+        </tr>
 
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
