--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>Generative Deformable Radiance Fields for Disentangled Image Synthesis of Topology-Varying Objects</papertitle>
                 <br>
-                Ziyu Wang, <strong>Yu Deng</strong>, Jiaolong Yang, Jingyu Yi, Xin Tong
+                Ziyu Wang, <strong>Yu Deng</strong>, Jiaolong Yang, Jingyi Yu, Xin Tong
                 <br>
                 <em>The 30th Pacific Graphics Conference</em>, PG 2022,
                 <br>
