--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <br>
                 <em>The 30th Pacific Graphics Conference</em>, PG 2022,
                 <br>
-                <a href="https://yudeng.github.io/">[PDF]</a>
+                <a href="https://arxiv.org/abs/2209.04183">[PDF]</a>
+		    <a href="https://ziyuwang98.github.io/GDRF/">[Project]</a>
                 <br>
                 <p>We propose a generative model for synthesizing radiance fields of topology-varying objects with disentangled shape and appearance variations.</p>
             </td>
