--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
                 <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
+		    <a href="images/GRAM-HD.txt">[BibTeX]</a>
                 <br>
                 <p>We propose GRAM-HD, a 3D-aware GAN that can generate photorealistic and 3D-consistent images at 1024x1024 resolution.</p>
             </td>
@@ -90,6 +91,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2209.04183">[PDF]</a>
 		    <a href="https://ziyuwang98.github.io/GDRF/">[Project]</a>
+		    <a href="images/GDRF.txt">[BibTeX]</a>
                 <br>
                 <p>We propose a generative model for synthesizing radiance fields of topology-varying objects with disentangled shape and appearance variations.</p>
             </td>
