--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2209.04183">[PDF]</a>
 		    <a href="https://ziyuwang98.github.io/GDRF/">[Project]</a>
+		    <a href="https://github.com/ziyuwang98/GDRF/">[Code]</a>
 		    <a href="images/GDRF.txt">[BibTeX]</a>
                 <br>
                 <p>We propose a generative model for synthesizing radiance fields of topology-varying objects with disentangled shape and appearance variations.</p>
