--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+		
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/anifacegan.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>AniFaceGAN: Animatable 3D-Aware Face Image Generation for Video Avatars</papertitle>
+                <br>
+                Yue Wu, <strong>Yu Deng</strong>, Jiaolong Yang, Fangyun Wei, Qifeng Chen,  Xin Tong
+                <br>
+                <em>2022 Conference on Neural Information Processing Systems</em>, NeurIPS 2022,
+                <br>
+                <a href="https://arxiv.org/abs/2210.06465">[PDF]</a>
+                <a href="https://yuewuhkust.github.io/AniFaceGAN/">[Project]</a>
+		    <a href="images/anifacegan.txt">[BibTeX]</a>
+                <br>
+                <p>We propose AniFaceGAN, an animatable 3D-aware GAN for multiview consistent face animation generation.</p>
+            </td>
+        </tr>		
+		
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
