--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Yue Wu, <strong>Yu Deng</strong>, Jiaolong Yang, Fangyun Wei, Qifeng Chen,  Xin Tong
                 <br>
                 <em>2022 Conference on Neural Information Processing Systems</em>, NeurIPS 2022,
-		    <strong><font color="#FF0000">Spotlight</font></strong>
+		    <strong><font color="#FFB1B1">Spotlight</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2210.06465">[PDF]</a>
                 <a href="https://yuewuhkust.github.io/AniFaceGAN/">[Project]</a>
