--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+	
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/graminverter.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Learning Detailed Radiance Manifolds for High-Fidelity and 3D-Consistent Portrait Synthesis from Monocular Image</papertitle>
+                <br>
+                <strong>Yu Deng</strong>, Baoyuan Wang, Heung-Yeung Shum
+                <br>
+                <em>Arxiv 2022,
+                <br>
+                <a href="https://arxiv.org/abs/2211.13901">[PDF]</a>
+                <a href="https://yudeng.github.io/GRAMInverter/">[Project]</a>
+		    <a href="images/anifacegan.txt">[BibTeX]</a>
+                <br>
+                <p>We propose a learning-based approach for high-fidelity and 3D-consistent novel view synthesis of monocular portrait images.</p>
+            </td>
+        </tr>			
 		
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
