--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2211.13901">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAMInverter/">[Project]</a>
-		    <a href="images/anifacegan.txt">[BibTeX]</a>
+		    <a href="images/graminverter.txt">[BibTeX]</a>
                 <br>
                 <p>We propose a learning-based approach for high-fidelity and 3D-consistent novel view synthesis of monocular portrait images.</p>
             </td>
