--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <strong>Yu Deng</strong>, Baoyuan Wang, Heung-Yeung Shum
                 <br>
-                <em>Arxiv 2022,
+                <em>arXiv</em> 2022,
                 <br>
                 <a href="https://arxiv.org/abs/2211.13901">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAMInverter/">[Project]</a>
