--- a/index.html
+++ b/index.html
@@ -72,7 +72,30 @@
                 <br>
                 <p>We propose a learning-based approach for high-fidelity and 3D-consistent novel view synthesis of monocular portrait images.</p>
             </td>
-        </tr>			
+        </tr>		
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/pdfgc.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Progressive Disentangled Representation Learning for Fine-Grained Controllable Talking Head Synthesis</papertitle>
+                <br>
+                Duomin Wang, <strong>Yu Deng</strong>, Zixin Yin, Heung-Yeung Shum, Baoyuan Wang
+                <br>
+                <em>arXiv</em> 2022,
+                <br>
+                <a href="https://yudeng.github.io/">[PDF]</a>
+                <a href="https://dorniwang.github.io/PD-FGC/">[Project]</a>
+                <br>
+                <p>We propose a one-shot talking head synthesis approach with disentangled control over lip motion, eye gaze&blink, head pose, and emotional expression.</p>
+            </td>
+        </tr>		      
+	      
 		
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
