--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <br>
                 <em>arXiv</em> 2022,
                 <br>
-                <a href="https://yudeng.github.io/">[PDF]</a>
+                <a href="https://arxiv.org/abs/2211.14506">[PDF]</a>
                 <a href="https://dorniwang.github.io/PD-FGC/">[Project]</a>
                 <br>
                 <p>We propose a one-shot talking head synthesis approach with disentangled control over lip motion, eye gaze&blink, head pose, and emotional expression.</p>
