--- a/index.html
+++ b/index.html
@@ -283,18 +283,36 @@
             </td>
         </tr>
 
-        <tr></tr>
-            <td style="padding:20px;width:0%;vertical-align:middle">
-            </td>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-		<hr style="margin-top:0px">
-                <p>The website template was adapted from <a href="https://jonbarron.info/">Jon Barron</a>.</p>
-            </td>
-        </tr>
-
       </td>
     </tr>
   </table>
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr>
+    <td style="padding:20px;width:100%;vertical-align:middle">
+      <heading>Academic Services</heading>
+    </td> 
+  </tr>
+</tbody>
+</table>
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+      <strong>Conference Reviewer:</strong> CVPR, ICCV, SIGGRAPH, SIGGRAPH Asia
+      <br>
+      <strong>Journal Reviewer:</strong> TPAMI
+
+  </td>
+</tbody>
+</table>
+<table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <td style="width:0%;vertical-align:middle">
+        </td>
+        <td style="width:100%;vertical-align:middle">
+        <hr style="margin-top:0px">
+            <p><font color="#999999">The website template was adapted from <a href="https://jonbarron.info/">Jon Barron</a>.</font></p>
+        </td>
+    </tr>
+  </tbody>
+</table>
 </body>
 
 </html>
