--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <strong>Yu Deng</strong>, Baoyuan Wang, Heung-Yeung Shum
                 <br>
-                <em>arXiv</em> 2022,
+                <em>2023 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2023,
                 <br>
                 <a href="https://arxiv.org/abs/2211.13901">[PDF]</a>
                 <a href="https://yudeng.github.io/GRAMInverter/">[Project]</a>
@@ -87,7 +87,7 @@
                 <br>
                 Duomin Wang, <strong>Yu Deng</strong>, Zixin Yin, Heung-Yeung Shum, Baoyuan Wang
                 <br>
-                <em>arXiv</em> 2022,
+                <em>2023 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2023,
                 <br>
                 <a href="https://arxiv.org/abs/2211.14506">[PDF]</a>
                 <a href="https://dorniwang.github.io/PD-FGC/">[Project]</a>
