--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<a href="images/mimic3d.png"><style="width:100%;max-width:100%; position: absolute;top: -5%"></a>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Mimic3D: Thriving 3D-Aware GANs via 3D-to-2D Imitation</papertitle>
+                <br>
+                Xingyu Chen*, <strong>Yu Deng*</strong>, Baoyuan Wang (* for equal contribution)
+                <br>
+                <em>arxiv 2023</em>,
+                <br>
+                <a href="https://arxiv.org/abs/2303.09036">[PDF]</a>
+                <a href="https://seanchenxy.github.io/Mimic3DWeb/">[Project]</a>
+                <br>
+                <p>We propose a novel approach that enables a 3D-aware GAN to generate images with both photorealism and strict 3D consistency.</p>
+            </td>
+        </tr>		
 	
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
