--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-		<a href="images/mimic3d.png"><style="width:100%;max-width:100%; position: absolute;top: -5%"></a>
+		<img src='images/mimic3d.png' style="width:100%;max-width:100%; position: absolute;top: -5%">
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
