--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-		<img src='images/mimic3d.png' style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Mimic3D" src="images/mimic3d.png" class="hoverZoomLink">
+		<a href="images/mimic3d.png"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Mimic3D" src="images/mimic3d.png" class="hoverZoomLink"></a>
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -261,7 +261,7 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one" >
-                    <img src='images/cvpr20_deep3dportrait.png' style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Deep3DPortrait" src="images/cvpr20_deep3dportrait.png" class="hoverZoomLink">
+			<a href="images/cvpr20_deep3dportrait.png"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Deep3DPortrait" src="images/cvpr20_deep3dportrait.png" class="hoverZoomLink"></a>
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
