--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a href="https://arxiv.org/abs/2303.09036">[PDF]</a>
                 <a href="https://seanchenxy.github.io/Mimic3DWeb/">[Project]</a>
                 <br>
-                <p>We propose a novel approach that enables a 3D-aware GAN to generate images with both photorealism and strict 3D consistency.</p>
+                <p>We propose a novel approach that enables a 3D-aware GAN to generate images with both state-of-the-art photorealism and strict 3D consistency.</p>
             </td>
         </tr>		
 	
