--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
 		<a href="images/mimic3d.png"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Mimic3D" src="images/mimic3d.png" class="hoverZoomLink"></a>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Mimic3D: Thriving 3D-Aware GANs via 3D-to-2D Imitation</papertitle>
                 <br>
                 Xingyu Chen*, <strong>Yu Deng*</strong>, Baoyuan Wang (* for equal contribution)
@@ -189,14 +189,14 @@
         </tr>
 
         <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
                 <source src='images/gram.mp4'>
 		</video>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>GRAM: Generative Radiance Manifolds for 3D-Aware Image Generation</papertitle>
                 <br>
                 <strong>Yu Deng</strong>, Jiaolong Yang, Jianfeng Xiang, Xin Tong
@@ -235,14 +235,14 @@
         </tr>
           
         <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one" >
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
                 <source src='images/disco.mp4'>
 		</video>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Disentangled and Controllable Face Image Generation via 3D Imitative-Contrastive Learning</papertitle>
                 <br>
                 <strong>Yu Deng</strong>, Jiaolong Yang, Dong Chen, Fang Wen, Xin Tong
@@ -280,14 +280,14 @@
         </tr>
 
         <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one" >
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
                 <source src='images/accurate3d.mp4'>
 		</video>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Accurate 3D Face Reconstruction with Weakly-Supervised Learning: From Single Image to Image Set</papertitle>
                 <br>
                 <strong>Yu Deng</strong>, Jiaolong Yang, Sicheng Xu, Dong Chen, Yunde Jia, Xin Tong
