--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <br>
                 Xingyu Chen*, <strong>Yu Deng*</strong>, Baoyuan Wang (* for equal contribution)
                 <br>
-                <em>arxiv 2023</em>,
+                <em>2023 IEEE International Conference on Computer Vision</em>, ICCV 2023,
                 <br>
                 <a href="https://arxiv.org/abs/2303.09036">[PDF]</a>
                 <a href="https://seanchenxy.github.io/Mimic3DWeb/">[Project]</a>
@@ -70,6 +70,29 @@
                 <p>We propose a novel approach that enables a 3D-aware GAN to generate images with both state-of-the-art photorealism and strict 3D consistency.</p>
             </td>
         </tr>		
+
+	<tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/GRAMHD.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>GRAM-HD: 3D-Consistent Image Generation at High Resolution with Generative Radiance Manifolds</papertitle>
+                <br>
+                Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>, Xin Tong
+                <br>
+                <em>2023 IEEE International Conference on Computer Vision</em>, ICCV 2023,
+                <br>
+                <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
+                <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
+		    <a href="images/GRAM-HD.txt">[BibTeX]</a>
+                <br>
+                <p>We propose GRAM-HD, a 3D-aware GAN that can generate photorealistic and 3D-consistent images at 1024x1024 resolution.</p>
+            </td>
+        </tr>
 	
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -140,29 +163,6 @@
                 <p>We propose AniFaceGAN, an animatable 3D-aware GAN for multiview consistent face animation generation.</p>
             </td>
         </tr>		
-		
-        <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
-                <source src='images/GRAMHD.mp4'>
-		</video>
-                </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-                <papertitle>GRAM-HD: 3D-Consistent Image Generation at High Resolution with Generative Radiance Manifolds</papertitle>
-                <br>
-                Jianfeng Xiang, Jiaolong Yang, <strong>Yu Deng</strong>, Xin Tong
-                <br>
-                <em>arXiv</em> 2022,
-                <br>
-                <a href="https://arxiv.org/abs/2206.07255">[PDF]</a>
-                <a href="https://jeffreyxiang.github.io/GRAM-HD/">[Project]</a>
-		    <a href="images/GRAM-HD.txt">[BibTeX]</a>
-                <br>
-                <p>We propose GRAM-HD, a 3D-aware GAN that can generate photorealistic and 3D-consistent images at 1024x1024 resolution.</p>
-            </td>
-        </tr>
 	      
 	<tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -318,7 +318,7 @@
   <td style="padding:20px;width:75%;vertical-align:middle">
       <strong>Conference Reviewer:</strong> CVPR, ICCV, SIGGRAPH, SIGGRAPH Asia
       <br>
-      <strong>Journal Reviewer:</strong> TPAMI
+      <strong>Journal Reviewer:</strong> TPAMI, TVCG
 
   </td>
 </tbody>
