--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/portrait4d.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
+                <papertitle>Mimic3D: Thriving 3D-Aware GANs via 3D-to-2D Imitation</papertitle>
+                <br>
+                <strong>Yu Deng</strong>, Duomin Wang, Xiaohang Ren, Xingyu Chen, Baoyuan Wang
+                <br>
+                <em>arXiv 2023</em>,
+                <br>
+                <a href="">[PDF]</a>
+                <a href="https://yudeng.github.io/Portrait4D/">[Project]</a>
+                <br>
+                <p>We propose a one-shot 4D head synthesis approach for high-fidelity 4D head avatar reconstruction while trained on large-scale synthetic data.</p>
+            </td>
+        </tr>	
+		
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
 		<a href="images/mimic3d.png"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Mimic3D" src="images/mimic3d.png" class="hoverZoomLink"></a>
                 </div>
             </td>
